devopsdemo-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  labels:
    app: devopsdemo
  name: devopsdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopsdemo
  strategy: {}
  template:
    metadata:
      labels:
        app: devopsdemo
    spec:
      containers:
      - image: unipertestregistry.azurecr.io/kubernetesdemoappone:63580
        imagePullPolicy: Always
        name: devopsdemo
        resources:
          requests:
            memory: "400Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
          protocol: TCP
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
      restartPolicy: Always
status: {}
