kubernetesnetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-namespace-network-policy
spec:
  podSelector:
    matchLabels:
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
    - from:
      - namespaceSelector:
          matchLabels:
            environment: ingresscontroller
    # Add or remove following section
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: app2   
    # till here

  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - to:
        - namespaceSelector:
            matchLabels:
              networking/namespace: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
